--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
A.F.I...S. [ZBXNEXT-1343] removed support of old style node-based distributed monitoring (Eduard, Sasha)
........S. [ZBXNEXT-2256] added support of host level macros like {HOST.*} along with user macros in LLD filter regexps (Sasha)
..F....... [ZBX-7979] added button "Clear history and trends" to scenarios form (Krists)
..F....... [ZBXNEXT-2065] added a filter option to hide recently resolved triggers in Monitoring -> Triggers (Oleg)
..F....... [ZBXNEXT-949] improved filters by adding different titles for open and collapsed states (Krists)
..F....... [ZBXNEXT-2107] added links to dependency triggers and added comma separated host list if dependency trigger belongs to multiple hosts in trigger edit and massupdate forms (Ivo)
...G...... [ZBXNEXT-2225] added a percentage free parameter to system.swap.size item; changed the way swap size is calculated (Juris)
..F....... [ZBXNEXT-1119] changed the global search to also search by technical host and template names (Pavels)
...G...... [ZBXNEXT-2194] added configuration option to include all files in a directory on Windows (Nikolaj)
........S. [ZBXNEXT-751] added support of user macros in the notifications and commands (Nikolaj)
A.F....... [ZBXNEXT-2123] implemented the application and host inventory filters on the trigger monitoring page (Pavels)
A.F.I...S. [ZBXNEXT-2117] added "Description" field for templates, hosts and proxies (Eduard, Sasha)
..F.I..... [ZBXNEXT-1533] added "Action name" in "History of actions" screen and added a patch to change screen item sort order (Oleg, Pavels)
..F....... [ZBX-7850] unified the "Go to" section of host pop-up menus displayed in maps and other other places (Ivo)
..F....... [ZBXNEXT-421] implemented user name in action audit page (Eduard)
..F....... [ZBXNEXT-2167] improved info column in latest data monitoring and item, trigger, discovery host configuration (Eduard)